--- a/_public_html_/.htaccess
+++ b/_public_html_/.htaccess
@@ -19,10 +19,10 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
 RewriteCond %{REQUEST_FILENAME} -f
 RewriteRule ^static/ - [L]
 
-# Redirect all other requests to index.php
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php [QSA,L]
+# Redirect all other requests to index.php (disabled)
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteRule ^(.*)$ index.php [QSA,L]
 
 # Set proper MIME types for static files
 <FilesMatch "\.(css)$">
