--- a/_public_html_/projects.json
+++ b/_public_html_/projects.json
@@ -1,11 +1,11 @@
 {
   "projects": [
     {
-      "id": "notemodo",
-      "name": "Notemodo",
-      "url": "https://notemodo.com",
-      "description": "From Apple Notes to blog posts",
-      "last_updated": "2025-09-02"
+      "id": "vodomodo",
+      "name": "Vodomodo",
+      "url": "https://vodomodo.com",
+      "description": "Edit videos with text commands",
+      "last_updated": "2025-09-15"
     },
     {
       "id": "doshmodo",
@@ -13,6 +13,13 @@
       "url": "https://doshmodo.com",
       "description": "Find your way of money",
       "last_updated": "2025-09-05"
+    },
+    {
+      "id": "notemodo",
+      "name": "Notemodo",
+      "url": "https://notemodo.com",
+      "description": "From Apple Notes to blog posts",
+      "last_updated": "2025-09-02"
     },
     {
       "id": "binge-worthy-shows",
@@ -35,14 +42,6 @@
       "url": "https://emrahdiril.com/chatgpt2pdf",
       "description": "Save and print your ChatGPT conversations as clean PDFs",
       "last_updated": "2025-06-28"
-    },
-    {
-      "id": "dream-vistas-art",
-      "name": "Dream Vistas Art",
-      "url": "https://dreamvistas.art",
-      "description": "The Dreamstress weaves surreal, natured-inspired dreams infused with psychotropic wonder for all -- Surrealist dream-like art inspired by nature and psychotropia",
-      "instagram_url": "https://instagram.com/dream_vistas.art",
-      "last_updated": "2025-08-02"
     },
     {
       "id": "scrubbler",
