--- a/_public_html_/projects.json
+++ b/_public_html_/projects.json
@@ -4,8 +4,8 @@
       "id": "millionminds",
       "name": "Million Minds",
       "url": "https://millionminds.one",
-      "description": "Biologically inspired AI framework",
-      "last_updated": "2025-11-16"
+      "description": "Neuroscience-inspired AI Framework",
+      "last_updated": "2025-11-17"
     },
     {
       "id": "vodomodo",
